Started working on the encoder.
git-svn-id: svn://svn.code.sf.net/p/liblzg/code/trunk@8 919d6115-40b2-4a68-9893-b32b752ddb1a

--- a/src/Makefile
+++ b/src/Makefile
@@ -27,7 +27,7 @@
 
 # Compiler and linker settings
 CC = gcc
-CFLAGS = -c -O3 -W -Wall -Iinclude
+CFLAGS = -c -g -O3 -W -Wall -Iinclude
 LC = gcc
 LFLAGS = -Llib
 LIBS = -llzg
