Fixed compiler errors and warnings under Mac OS X.
git-svn-id: svn://svn.code.sf.net/p/liblzg/code/trunk@11 919d6115-40b2-4a68-9893-b32b752ddb1a

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -29,7 +29,7 @@
 CC = gcc
 CFLAGS = -c -g -O3 -funroll-loops -W -Wall
 AR = ar
-ARFLAGS = -rc
+ARFLAGS = -rcs
 RM = rm -f
 
 # Files
@@ -47,7 +47,7 @@ clean:
 
 # Library build rule
 $(STATIC_LIB): $(OBJS)
-	$(AR) $(ARFLAGS) -o $@ $(OBJS)
+	$(AR) $(ARFLAGS) $@ $(OBJS)
 
 # Object files build rules
 encode.o: encode.c internal.h ../include/lzg.h
