Added support for progress callback, improved the documentation and a few other fixes.
git-svn-id: svn://svn.code.sf.net/p/liblzg/code/trunk@18 919d6115-40b2-4a68-9893-b32b752ddb1a

--- a/src/lib/Makefile
+++ b/src/lib/Makefile
@@ -27,7 +27,7 @@
 
 # Compiler and linker settings
 CC = gcc
-CFLAGS = -c -g -O3 -funroll-loops -W -Wall
+CFLAGS = -c -O3 -funroll-loops -W -Wall
 AR = ar
 ARFLAGS = -rcs
 RM = rm -f
